added login end point

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI='mongodb+srv://vidhu18102:gNao8I8ybBJrl2rG@inotebook.xcx8twf.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET='evgrniopvwmo[pf]'
