added api calls for login and signup

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI='mongodb+srv://vidhu18102:gNao8I8ybBJrl2rG@inotebook.xcx8twf.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET='evgrniopvwmo[pf]'
+BACKEND_HOST='http://localhost:5000'
